<resources>
    <string name="app_name">푸드 다이어리</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_positive_text">확인</string>
    <string name="dialog_negative_text">취소</string>

    <string name="all">All</string>
    <string name="date">날짜</string>
    <string name="location">장소</string>
    <string name="rate">평가</string>
    <string name="information">정보</string>

    <!--권한 요청-->
    <string name="request_permission_title">권한 요청</string>
    <string name="request_permission_message_photo">사진 첨부 기능 활성화를 위해 접근 허용 요청드립니다. [필수사항]</string>

    <string name="request_permission_denied_title_camera_state">카메라 허용</string>
    <string name="request_permission_denied_message_camera_state">설정 페이지에서 <![CDATA["'"]]>카메라<![CDATA["'"]]> 권한 수정 부탁드립니다. [필수사항]</string>

    <string name="request_permission_denied_title_storage_access">저장공간 허용</string>
    <string name="request_permission_denied_message_storage_access">설정 페이지에서 <![CDATA["'"]]>저장공간<![CDATA["'"]]> 권한 수정 부탁드립니다. [필수사항]</string>

    <string name="time_type_1">#아침</string>
    <string name="time_type_2">#점심</string>
    <string name="time_type_3">#저녁</string>
    <string name="time_type_4">#야식</string>
    <string name="time_type_5">#간식</string>

    <string name="taste_type_1">최고</string>
    <string name="taste_type_2">만족</string>
    <string name="taste_type_3">별로</string>

    <string name="toast_email_activity_not_found">이메일을 전송할 수 있는 앱이 설치되어있지 않습니다.</string>
    <string name="toast_email_error">이메일 앱 실행 중 에러가 발생하였습니다.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none_data">작성된 기록이 없습니다.</string>

</resources>