<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="45dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/radio_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/time_type_1"
                    android:textColor="@drawable/radio_text"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/radio_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/time_type_2"
                    android:textColor="@drawable/radio_text"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/radio_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/time_type_3"
                    android:textColor="@drawable/radio_text"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/radio_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/time_type_4"
                    android:textColor="@drawable/radio_text"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/radio_background"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/time_type_5"
                    android:textColor="@drawable/radio_text"
                    android:textStyle="bold" />
            </RadioGroup>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>